@@ -1,3 +1,7 @@
+Fri Dec  4 21:51:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* marshal.c (marshal_load): should set taintness.  [ruby-dev:39723]
+
 Thu Dec  3 22:42:09 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>
 
 	* test/stringio/test_stringio.rb: use 1.8 methods for easier backport.
